# claude-code-docs

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CLEANING_SUMMARY.md  COMMIT_SUMMARY.md  COMPREHENSIVE_VALIDATION_RESULTS.json  CONTRIBUTING.md  ENHANCEMENTS.md  FULL_TEXT_SEARCH_REPORT.md  GITHUB_ACTIONS_FIX.md  GIT_RESTRUCTURE_SUMMARY.md  GIT_SETUP_SUMMARY.md  IMPROVEMENTS.md  INSTALL.md  INSTALLATION_CHANGES.md  Install-ClaudeCodeDocs.ps1  Install-ClaudeCodeDocs.ps1.backup  LLMS_FULL_TXT_INTEGRATION_PLAN.md  MIGRATION_INDEX.md  MIGRATION_PLAN.md  MIGRATION_QUICKSTART.md  MIGRATION_ROADMAP.md  MIGRATION_SUMMARY.md  PHASE1_COMPLETION_SUMMARY.md  PHASE1_INTEGRATION_TEST_RESULTS.md  PHASE1_SUMMARY.md  PHASE1_VALIDATION_REPORT.md  PHASE4_HOOK_SYSTEM_REPORT.md  PHASE5_COMPLETION_SUMMARY.md  README-WINDOWS.md  README.md  README_CN.md  REPOSITORY_STRUCTURE.md  TASK4_REPORT.md  TEST.md  TESTING-CHECKLIST.md  TESTING.md  TEST_FIX_REPORT.md  UNINSTALL.md  (+25 more)
analysis/: repo_structure.md
auto-sync/: .gitignore  README.md  auto-sync.sh  check-updates.sh
docs/: .search_index.json  DOCS_MAP.md  EXAMPLES.md  SEARCH_GUIDE.md  changelog.md  cli-reference-cn.md  costs-cn.md  desktop.md  docs__en__agents-and-tools__tool-use__computer-use-tool.md  docs__en__agents-and-tools__tool-use__programmatic-tool-calling.md  docs__en__agents-and-tools__tool-use__tool-search-tool.md  docs__en__build-with-claude__overview.md  docs_manifest.json  en__api__handling-stop-reasons.md  en__docs__build-with-claude__text-generation.md  mcp.md  (+13 more)
docs-dev/: CAPABILITIES.md  DEVELOPMENT.md  EXAMPLES.md
(+129 files in other folders)
