[project]
name = "claude-code-docs"
version = "0.1.0"
description = "Claude Code documentation mirror with automated updates and enhanced features"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# This is a scripts-based project, not a traditional package
# Don't auto-discover packages to avoid including docs/specs/analysis
packages = []

# Explicitly exclude documentation directories
[tool.setuptools.packages.find]
exclude = ["specs", "specs.*", "analysis", "analysis.*", "docs", "docs.*", "tests", "tests.*", "upstream", "upstream.*"]
